--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "author": "Valeska Marques",
   "license": "ISC",
   "dependencies": {
-    "bootstrap": "^5.2.3",
+    "bootstrap": "^4.6.2",
+    "bootstrap-select": "^1.13.18",
     "jquery": "^3.6.4"
   }
 }
